corrected openapi doc and backend paths
